--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
         <button id="boxmaker" onclick="createdraggablebox()">Create Box</button>
         <div id="Container"></div>
         <script src="main.js"></script>
+        <div id="AIR" hidden="true"></div>
     </body>
 </html>
